clang/test/BSC/Negative/Trait/trait_redefinition/trait-redefinition-basic.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait a{}; // expected-note {{previous definition is here}}
_Trait a{}; // expected-error {{redefinition of 'a'}}
